Fix margins, flexbox margin don't collapse

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+.file-dossier > div > .message {
+  margin-top: 0 !important;
+}
+
 .file-dossier-bystroscan-params input {
   padding: 0.2rem 0.5rem !important;
   text-align: center !important;
